Use libraries for common operations.
Migrate to using standardized libraries for common operations and tests
within the role.

Changed:
* Migrate OS roles to r_pufky.deb collection.
* Migrate common test patterns to r_pufky.lib.tests.
* Minimize use of line-length yamllint disable.
* Standardize molecule test docstrings.

--- a/defaults/main/config/pg_ctl.yml
+++ b/defaults/main/config/pg_ctl.yml
@@ -5,7 +5,7 @@
 
 # List of postgres cluster specific options.
 #
-# Options to pass to pg_ctl via pg_ctl.conf. Options are automatically qouted.
+# Options to pass to pg_ctl via pg_ctl.conf. Options are automatically quoted.
 #
 # Default: [].
 #
