--- a/molecule/hba_includes/verify.yml
+++ b/molecule/hba_includes/verify.yml
@@ -1,5 +1,4 @@
 ---
-# yamllint disable rule:line-length
 - name: 'HBA includes | verify database'
   hosts: 'all'
   gather_facts: false
@@ -15,34 +14,33 @@
       register: _test_postgres_processes
 
     # Will be enabled but not running, forked from @ service for version.
-    - name: 'HBA includes | verify database | assert postgresql@.service enabled'
+    - name:
+        'HBA includes | verify database | assert postgresql@.service enabled'
       ansible.builtin.assert:
+        quiet: true
         that:
           - '"postgresql.service" in ansible_facts.services'
-          - 'ansible_facts["services"]["postgresql.service"]["status"] == "enabled"'
-        fail_msg: 'postgresql.service should be active.'
+          - 'ansible_facts["services"]["postgresql.service"]["status"] == "enabled"'  # yamllint disable-line rule:line-length
+        fail_msg: '✘ postgresql.service should be active.'
 
-    - name: 'HBA includes | verify database | assert postgresql@.service running'
+    - name:
+        'HBA includes | verify database | assert postgresql@.service running'
       ansible.builtin.assert:
+        quiet: true
         that:
           - _test_postgres_processes.stdout_lines | length > 2
-        fail_msg: 'Postgres has not successfully started.'
+        fail_msg: '✘ Postgres has not successfully started.'
 
-    - name: 'HBA includes | verify config | query pg_hba.conf'
-      ansible.builtin.copy:
-        src: 'files/pg_hba.conf'
-        dest: '/etc/postgresql/17/main/pg_hba.conf'
-        owner: 'postgres'
-        group: 'postgres'
-        mode: '0640'
-      check_mode: true
-      diff: true
-      register: _test_postgres_pg_hba
-
-    - name: 'HBA includes | verify config | assert pg_hba.conf'
-      ansible.builtin.assert:
-        that:
-          - not _test_postgres_pg_hba.changed
-        fail_msg: >
-          /etc/postgresql/17/main/pg_hba.conf is not in expected format:
-          {{ _test_postgres_pg_hba.diff }}.
+    - name:
+        'HBA includes | verify config | /etc/postgresql/17/main/pg_hba.conf'
+      ansible.builtin.include_role:
+        name: 'r_pufky.lib.tests'
+        tasks_from: 'copy.yml'
+      vars:
+        test_name:
+          'HBA includes | verify config | /etc/postgresql/17/main/pg_hba.conf'
+        test_src: 'files/pg_hba.conf'
+        test_file: '/etc/postgresql/17/main/pg_hba.conf'
+        test_owner: 'postgres'
+        test_group: 'postgres'
+        test_mode: '0640'
