--- a/molecule/hba_includes/molecule.yml
+++ b/molecule/hba_includes/molecule.yml
@@ -1,11 +1,16 @@
 ---
-# yamllint disable rule:line-length
-# Confirm:
+###############################################################################
+# HBA Includes
+###############################################################################
+# pg_hba.conf files are rendered correctly for all options.
+#
+# Tests:
 # * pg_hba.conf - include_dir (all configs) sources directory correctly.
 # * pg_hba.conf - include_if_exists sources existing and non-existing file
 #   correctly.
 # * pg_hba.conf - include - sources existing file correctly.
 # * All options specified with multiple values are rendered multiple times.
+
 dependency:
   name: 'galaxy'
 driver:
@@ -27,7 +32,10 @@ provisioner:
             database: 'all'
             user: 'all'
             method: 'trust'
-        postgres_service_confd_path: '{{ lookup("env", "MOLECULE_SCENARIO_DIRECTORY") }}/files/conf.d'
+        postgres_service_confd_path: '{{
+            lookup("env", "MOLECULE_SCENARIO_DIRECTORY") ~
+            "/files/conf.d"
+          }}'
         postgres_hba_include_dir:
           - 'conf.d'
         postgres_hba_include_if_exists:
