--- a/molecule/ident_includes/molecule.yml
+++ b/molecule/ident_includes/molecule.yml
@@ -1,11 +1,16 @@
 ---
-# yamllint disable rule:line-length
-# Confirm:
+###############################################################################
+# Ident Includes
+###############################################################################
+# pg_ident.conf files are rendered correctly for all options.
+#
+# Tests:
 # * pg_ident.conf - include_dir (all configs) sources directory correctly.
 # * pg_ident.conf - include_if_exists sources existing and non-existing file
 #   correctly.
 # * pg_ident.conf - include - sources existing file correctly.
 # * All options specified with multiple values are rendered multiple times.
+
 dependency:
   name: 'galaxy'
 driver:
@@ -34,7 +39,10 @@ provisioner:
             map_name: 'local_all'
             system_username: 'root'
             pg_username: 'postgres'
-        postgres_service_confd_path: '{{ lookup("env", "MOLECULE_SCENARIO_DIRECTORY") }}/files/conf.d'
+        postgres_service_confd_path: '{{
+            lookup("env", "MOLECULE_SCENARIO_DIRECTORY") ~
+            "/files/conf.d"
+          }}'
         postgres_ident_include_dir:
           - 'conf.d'
         postgres_ident_include_if_exists:
