--- a/tasks/prep.yml
+++ b/tasks/prep.yml
@@ -26,20 +26,37 @@
     _postgres_etc_dir: '/etc/postgresql/{{ postgres_service_version }}'
     _postgres_scripts: '/etc/postgresql/{{ postgres_service_version }}/scripts'
     _postgres_bin: '/usr/lib/postgresql/{{ postgres_service_version }}/bin'
-    _postgres_lc_collate: '{{ postgres_databases | default([]) | map(attribute="lc_collate", default="en_US.UTF-8") | unique }}'
-    _postgres_lc_ctype: '{{ postgres_databases | default([]) | map(attribute="lc_ctype", default="en_US.UTF-8") | unique }}'
-    _postgres_lc_messages: '{{ postgres_config.lc_messages | default("en_US.UTF-8") }}'
-    _postgres_lc_monetary: '{{ postgres_config.lc_monetary | default("en_US.UTF-8") }}'
-    _postgres_lc_numeric: '{{ postgres_config.lc_numeric | default("en_US.UTF-8") }}'
+    _postgres_lc_collate: '{{
+        postgres_databases | default([]) |
+        map(attribute="lc_collate", default="en_US.UTF-8") | unique
+      }}'
+    _postgres_lc_ctype: '{{
+        postgres_databases | default([]) |
+        map(attribute="lc_ctype", default="en_US.UTF-8") | unique
+      }}'
+    _postgres_lc_messages:
+      '{{ postgres_config.lc_messages | default("en_US.UTF-8") }}'
+    _postgres_lc_monetary:
+      '{{ postgres_config.lc_monetary | default("en_US.UTF-8") }}'
+    _postgres_lc_numeric:
+      '{{ postgres_config.lc_numeric | default("en_US.UTF-8") }}'
     _postgres_lc_time: '{{ postgres_config.lc_time | default("en_US.UTF-8") }}'
 
 - name: 'Prep | generate locales list'
   ansible.builtin.set_fact:
-    _postgres_locales: '{{ (_postgres_lc_collate + _postgres_lc_ctype + [_postgres_lc_messages] + [_postgres_lc_monetary] + [_postgres_lc_numeric] + [_postgres_lc_time]) | flatten | unique }}'
+    _postgres_locales: '{{
+        (_postgres_lc_collate +
+         _postgres_lc_ctype +
+         [_postgres_lc_messages] +
+         [_postgres_lc_monetary] +
+         [_postgres_lc_numeric] +
+         [_postgres_lc_time]) |
+        flatten | unique
+      }}'
 
 - name: 'Install | pre-requisite packages'
   ansible.builtin.include_role:
-    name: 'r_pufky.srv.apt'
+    name: 'r_pufky.deb.apt'
   vars:
     apt_packages:
       - '{{ postgres_role_prep_packages }}'
@@ -48,7 +65,7 @@
 - name: 'Prep | manage users'
   when: postgres_create_user
   ansible.builtin.include_role:
-    name: 'r_pufky.srv.users'
+    name: 'r_pufky.deb.users'
     tasks_from: 'role_account_add.yml'
   vars:
     users_role_group: '{{ postgres_role_group }}'
@@ -59,14 +76,17 @@
     name: 'postgresql-{{ postgres_service_version }}'
     question: 'postgresql-{{ postgres_service_version }}/postrm_purge_data'
     vtype: 'boolean'
-    value: '{{ postgres_service_purge_enable | default(true) | string | lower }}'
+    value:
+      '{{ postgres_service_purge_enable | default(true) | string | lower }}'
 
 - name: 'Prep | set debconf auto_upgrade'
   ansible.builtin.debconf:
     name: 'postgresql'
     question: 'postgresql/auto_upgrade'
     vtype: 'boolean'
-    value: '{{ postgres_service_auto_upgrade_enable | default(false) | string | lower }}'
+    value: '{{
+        postgres_service_auto_upgrade_enable | default(false) | string | lower
+      }}'
 
 # Locales must be generated to be used for database creation.
 - name: 'Prep | configure locales'
@@ -92,7 +112,10 @@
 - name: 'Prep | sanitize postgres_hba_config'
   when: postgres_hba_config | length > 0
   ansible.builtin.set_fact:
-    _postgres_hba_config: '{{ _postgres_hba_config | default([]) + [postgres_role_template_hba | combine(item)] }}'
+    _postgres_hba_config: '{{
+        _postgres_hba_config | default([]) +
+        [postgres_role_template_hba | combine(item)]
+      }}'
   loop: '{{ postgres_hba_config }}'
   loop_control:
     label: '{{ item.type }} {{ item.user }}@{{ item.database }}'
